Added Reports and Data Driven

--- a/testData/config.properties
+++ b/testData/config.properties
@@ -1,3 +1,6 @@
+#Environment
+ExecutionEnvironment = Local
+
 #Application Details
 ApplicationURL = https://opensource-demo.orangehrmlive.com/
 BROWSER = CHROME
